Closed Bug 490835 Opened 17 years ago Closed 17 years ago

nsMacCharset and nsOS2Charset shouldn't createInstance the locale service

Categories

(Core :: Internationalization, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

Followup to bug 207333 for OS2 and Mac locale consumers
Attached patch fix consumersSplinter Review
Attachment #375184 - Flags: superreview?(neil)
Attachment #375184 - Flags: review?(smontagu)
Attachment #375184 - Flags: review?(smontagu) → review+
Attachment #375184 - Flags: superreview?(neil) → superreview+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: