Bug 490835 nsMacCharset and nsOS2Charset shouldn't createInstance the locale service Followup to bug 207333 for OS2 and Mac locale consumers r=smontagu sr=neil